sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:21: error: '(' expected but '{' found.
                     } while {!swapped}
                             ^